<resources>
    <string name="app_name">Local Lim</string>
    <string name="intro"> Solidarity platform for exchanging services in Limoges</string>
    <string name="btn_login">Login</string>
    <string name="btn_user_signup">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="user_registration">New user registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="btn_register">Register</string>
    <string name="available_service">Available Services:</string>
    <string name="browser_category">Browser Category</string>
    <string name="service_description">This is a detailed description of the service.</string>
    <string name="tel">Tel:</string>
    <string name="address">Address:</string>
    <string name="location_city">Location: City</string>
    <string name="author">Author:</string>
    <string name="service_title">Service Title</string>
    <string name="add_new_service">Add New Service</string>
    <string name="select_image_from_gallery">Select Image from Gallery</string>
    <string name="location">Location</string>
    <string name="specific_address">Specific Address</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="description">Description</string>
    <string name="save_service">Save Service</string>
    <string name="add_service">Add Service</string>
    <string name="service">Service</string>
    <string name="my_services">My Service</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="user_profile">User profile</string>
    <string name="user_name">User Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="service_location">Service Location\n</string>
    <string name="select_built_in_image">Select Built-in Image</string>
    <string name="my_profile">My Profile</string>
    <string name="user_example_com">user@example.com</string>
    <string name="account_information">Account Information</string>
    <string name="services_added">Services Added</string>
    <string name="_0">0</string>
</resources>